<resources>
    <string name="app_name">groupe_1_2025</string>
    <string name="bouton_calculatrice">Calculatrice</string>
    <string name="nombre_1" translatable="false" >1</string>
    <string name="nombre_0" translatable="false" >0</string>
    <string name="nombre_2" translatable="false" >2</string>
    <string name="nombre_3" translatable="false" >3</string>
    <string name="nombre_4" translatable="false" >4</string>
    <string name="nombre_5" translatable="false" >5</string>
    <string name="nombre_6" translatable="false" >6</string>
    <string name="nombre_7" translatable="false" >7</string>
    <string name="nombre_8" translatable="false" >8</string>
    <string name="nombre_9" translatable="false" >9</string>
    <string name="add" translatable="false">+</string>
    <string name="moins" translatable="false">-</string>
    <string name="multiplier" translatable="false">x</string>
    <string name="diviser" translatable="false">/</string>
    <string name="bouton_reset">RAZ</string>
    <string name="bouton_calculer">Calculer</string>
</resources>